--- a/autochat/index.html
+++ b/autochat/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Auto Generate Chat - NOC Port</title>
-    <link rel="icon" href="img/mahaga-ico.png" type="image/x-icon" />
+    <link rel="icon" href="autochat/img/mahaga-ico.png" type="image/x-icon" />
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script> -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="autochat/css/style.css" />
 
     <link
       rel="stylesheet"
