--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="portal">
         <!-- <h2>Mahaga NOC <span class="header-white">Portal</span></h2> -->
         <div class="buttons">
-          <a href="nocport/autochat" class="button"
+          <a href="/autochat" class="button"
             >Auto Chat PIC <span class="dot"></span
           ></a>
           <a href="/funsoteam" class="button"
