--- a/funsoteam/index.html
+++ b/funsoteam/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <img class="wm-logo" src="img/mhg-logo-wpsn-2.png" />
+    <img class="wm-logo" src="funsoteam/mhg-logo-wpsn-2.png" />
 
     <div class="container">
       <h1>[NOC] Auto-Generate NSO Follow Up</h1>
