--- a/autochat/index.html
+++ b/autochat/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <img class="wm-logo" src="img/mhg-logo-wpsn-2.png" />
+    <img class="wm-logo" src="autochat/img/mhg-logo-wpsn-2.png" />
 
     <div class="container">
       <h1>[NOC] Auto-Generate PIC Chat</h1>
